force-app/main/default/objects/Country_Info__c/Country_Info__c.object-meta.xml
<CustomObject>
    <label>Country Info</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>