force-app/main/default/objects/Country_Info__c/fields/ISO_Alpha2__c.field-meta.xml
<CustomField>
    <fullName>ISO_Alpha2__c</fullName>
    <externalId>true</externalId>
    <label>ISO Alpha-2</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>