force-app/main/default/objects/Country_Info__c/fields/ISO_Alpha3__c.field-meta.xml
<CustomField>
    <fullName>ISO_Alpha3__c</fullName>
    <label>ISO Alpha-3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>