force-app/main/default/objects/Country_Info__c/fields/RegionalBlocks__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocks__c</fullName>
    <label>Regional Blocks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>