force-app/main/default/objects/Country_Info__c/fields/Subregion__c.field-meta.xml
<CustomField>
    <fullName>Subregion__c</fullName>
    <label>Subregion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>