force-app/main/default/objects/Country_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ISO_Alpha2__c</columns>
    <columns>ISO_Alpha3__c</columns>
    <columns>Capital__c</columns>
    <columns>Region__c</columns>
    <columns>Subregion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>